baml_language/crates/baml_tests/snapshots/diagnostic_errors/runtime_id_misuse/baml_tests__diagnostic_errors__runtime_id_misuse__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.WithId {
  field_id: string
  $id: string
}
function user.$id() -> int  [expr] {
  {  } 1
}
function user.call_site_label() -> int  [expr] {
  {  } takes_int($id = baml.id.new())
}
function user.compound_assignment() -> string  [expr] {
  { $id Add= "-suffix" } $id
}
function user.from_json(j: baml.json.json) -> user.WithId  [expr] {
  user.WithId { field_id: baml.json.from_json(baml.json.field(j, "field_id")), $id: baml.json.from_json(baml.json.field(j, "$id")) }
}
function user.member_access() -> int  [expr] {
  {  } $id.len()
}
function user.non_string_assignment() -> string  [expr] {
  { $id = 42 } $id
}
function user.optional_member_access() -> int?  [expr] {
  {  } $id?.len()
}
function user.setter_never(s: string) -> string  [expr] {
  { $id = s } $id
}
function user.shadowing_let() -> int  [expr] {
  { let $id = 1 } 2
}
function user.shadowing_param($id: string) -> string  [expr] {
  {  } "x"
}
function user.shorthand_destructure(w: user.WithId) -> string  [expr] {
  { let WithId { $id: $id } = w } "x"
}
function user.takes_int(x: int) -> int  [expr] {
  {  } x
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "field_id": self.field_id.to_json(), "$id": self.$id.to_json() }
}
