baml_language/crates/baml_tests/snapshots/diagnostic_errors/runtime_id_misuse/baml_tests__diagnostic_errors__runtime_id_misuse__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.compound_assignment() -> string throws never {
  { : string
    $id Add= "-suffix" : "-suffix"
    $id : string
  }
  !! 333..336: `$id` cannot be the target of a compound assignment; use `$id = ...` with an override from `baml.id.new()`
}
function user.non_string_assignment() -> string throws never {
  { : string
    $id = 42 : 42
    $id : string
  }
  !! 505..507: type mismatch: expected string, got 42
}
function user.member_access() -> int throws never {
  { : unknown
    $id.len() : unknown
  }
  !! 608..620: `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
}
function user.takes_int(x: int) -> int throws never {
  { : int
    x : int
  }
}
function user.call_site_label() -> int throws never {
  { : int
    takes_int($id = baml.id.new()) : int
  }
  !! 805..819: `$id` cannot be set at the call site; assign `$id = ...` inside the function body instead
  !! 790..820: missing required argument `x`
}
function user.shadowing_let() -> int throws never {
  { : 2
    let $id = 1 : 1 -> int
    2 : 2
  }
}
function user.shadowing_param($id: string) -> string throws never {
  { : "x"
    "x" : "x"
  }
}
function user.setter_never(s: string) -> string throws never {
  { : string
    $id = s : string
    $id : string
  }
  !! 1280..1286: declared throws is `never`, but this function may also throw `baml.errors.InvalidArgument`
}
function user.optional_member_access() -> int | null throws never {
  { : unknown | null
    $id?.len() : unknown | null
  }
  !! 1507..1515: `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
}
class user.WithId {
  field_id: string
  $id: string
}
function user.WithId.to_json(self: user.WithId) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "field_id": self.field_id.to_json(), "$id": self.$id.to_json() } : map<string, baml.json.json>
}
function user.WithId.from_json(j: baml.json.json) -> user.WithId throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  WithId { field_id: baml.json.from_json<string>(baml.json.field(j, "field_id")), $id: baml.json.from_json<string>(baml.json.field(j, "$id")) } : user.WithId
}
function user.shorthand_destructure(w: user.WithId) -> string throws never {
  { : "x"
    let WithId { $id: $id } = w : user.WithId
    "x" : "x"
  }
}
function user.$id() -> int throws never {
  { : 1
    1 : 1
  }
}
class user.WithId$stream {
  field_id: string | null
  $id: string | null
}
