baml_language/crates/baml_tests/snapshots/diagnostic_errors/runtime_id_misuse/baml_tests__diagnostic_errors__runtime_id_misuse__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] error: `$id` cannot be the target of a compound assignment; use `$id = ...` with an override from `baml.id.new()`
   ╭─[ runtime_id.baml:8:5 ]
   │
 8 │     $id += "-suffix";
   │     ─┬─  
   │      ╰─── `$id` cannot be the target of a compound assignment; use `$id = ...` with an override from `baml.id.new()`
   │ 
   │ Note: Error code: E0001
───╯

  [type] error: type mismatch: expected string, got 42
    ╭─[ runtime_id.baml:15:11 ]
    │
 15 │     $id = 42;
    │           ─┬  
    │            ╰── type mismatch: expected string, got 42
    │ 
    │ Note: Error code: E0001
────╯

  [type] error: `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
    ╭─[ runtime_id.baml:21:5 ]
    │
 21 │     $id.len()
    │     ───┬───  
    │        ╰───── `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
    │ 
    │ Note: Error code: E0001
────╯

  [type] error: missing required argument `x`
    ╭─[ runtime_id.baml:30:5 ]
    │
 30 │     takes_int($id = baml.id.new())
    │     ───────────────┬──────────────  
    │                    ╰──────────────── missing required argument `x`
    │ 
    │ Note: Error code: E0005
────╯

  [type] error: `$id` cannot be set at the call site; assign `$id = ...` inside the function body instead
    ╭─[ runtime_id.baml:30:21 ]
    │
 30 │     takes_int($id = baml.id.new())
    │                     ──────┬──────  
    │                           ╰──────── `$id` cannot be set at the call site; assign `$id = ...` inside the function body instead
    │ 
    │ Note: Error code: E0001
────╯

  [hir] error: `$id` is the runtime identity and cannot be used as a binding name
    ╭─[ runtime_id.baml:35:9 ]
    │
 35 │     let $id = 1;
    │         ─┬─  
    │          ╰─── `$id` is reserved here
    │ 
    │ Note: Error code: E0010
────╯

  [hir] error: `$id` is the runtime identity and cannot be used as a binding name
    ╭─[ runtime_id.baml:40:26 ]
    │
 40 │ function shadowing_param($id: string) -> string {
    │                          ─┬─  
    │                           ╰─── `$id` is reserved here
    │ 
    │ Note: Error code: E0010
────╯

  [type] error: declared throws is `never`, but this function may also throw `baml.errors.InvalidArgument`
    ╭─[ runtime_id.baml:47:51 ]
    │
 47 │ function setter_never(s: string) -> string throws never {
    │                                                   ──┬──  
    │                                                     ╰──── declared throws is `never`, but this function may also throw `baml.errors.InvalidArgument`
    │ 
    │ Note: Error code: E0096
────╯

  [type] error: `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
    ╭─[ runtime_id.baml:55:5 ]
    │
 55 │     $id?.len()
    │     ────┬───  
    │         ╰───── `$id` is a value, not a binding; bind it to a local before accessing `.len` (e.g. `let id = $id; id.len`)
    │ 
    │ Note: Error code: E0001
────╯

  [hir] error: `$id` is the runtime identity and cannot be used as a binding name
    ╭─[ runtime_id.baml:65:18 ]
    │
 65 │     let WithId { $id } = w;
    │                  ─┬─  
    │                   ╰─── `$id` is reserved here
    │ 
    │ Note: Error code: E0010
────╯

  [hir] error: `$id` is the runtime identity and cannot be used as a binding name
    ╭─[ runtime_id.baml:70:10 ]
    │
 70 │ function $id() -> int {
    │          ─┬─  
    │           ╰─── `$id` is reserved here
    │ 
    │ Note: Error code: E0010
────╯
